apps/lim/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lim-ingress
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: "https"

spec:
  ingressClassName: public
  tls:
  - hosts:
    - ${LIM}
    secretName: tls

  rules:
  - host: ${LIM}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lim
            port:
              number: 37562
